tests/fail/immutable_reassign.kr
# Test: Cannot reassign immutable variable
# Expected: Error: Cannot reassign immutable variable 'x'

set x to 10
set x to 20

